Updated project descriptions on work page

--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
           <div class="project-description">
             <h2 class="mb-5 mt-5">Weather App</h2>
             <p class="mb-5">
-              Using Vanilla Javascript and OpenWeather API integration, I coded
-              a weather app that gives the weather in real-time as well as a
-              forecast and other details. Best viewed on desktop.
+              A weather app that gives weather information in real-time, a
+              forecast, and other details using Vanilla Javascript and
+              OpenWeather API integration. Best viewed on desktop.
             </p>
             <a
               href="https://goofy-davinci-995ba9.netlify.app"
@@ -187,7 +187,7 @@
           <div class="project-description">
             <h2 class="mb-5 mt-5">Senior Tix</h2>
             <p class="mb-5">
-              Redesigning elements of a discount tickets site to make it more
+              Redesigned elements of a discount tickets site to make it more
               accessible to senior citizens with various disabilities.
             </p>
             <a
