Edits on about page

--- a/about.html
+++ b/about.html
@@ -85,8 +85,7 @@
               collaboration to put forth the best version of a product.
             </p>
             <p>
-              I'm open to full-time junior frontend developer roles or
-              internships.
+              I'm open to full-time frontend developer roles or internships.
             </p>
             <a
               href="https://docs.google.com/document/d/1efdAGhXiDivWUDOIEqvqUwXqSt8tOp2mvWDqmrw9hBA/edit?usp=sharing"
