Added new images & descriptions

--- a/index.html
+++ b/index.html
@@ -86,28 +86,29 @@
       <div class="row mb-5">
         <div class="col-sm-6 d-none d-md-block">
           <img
-            src="/images/landing-page.png"
+            src="/images/react-weather.png"
             class="img-fluid project-image"
             alt="landing page project"
           />
         </div>
         <div class="col-sm-6">
           <div class="project-description">
-            <h2 class="mb-5">Landing Page Project</h2>
+            <h2 class="mb-5">React Weather App</h2>
             <p class="mb-5">
-              Static landing page on Mexican sweet bread (pan dulce) created
-              with HTML, CSS, and JavaScript. Designed in Canva. Best viewed on
-              desktop.
+              Developed React components for interactive weather application,
+              using real-time data from the OpenWeatherMap API integrating
+              geolocation, changing icons & custom music playlist functionality
+              to increase user engagement.
             </p>
             <a
-              href="https://priceless-jones-08af43.netlify.app/"
+              href="https://loquacious-fairy-25d2bd.netlify.app/"
               target="_blank"
               title="Launch project"
               class="primary-button btn-group"
               >Launch Project</a
             >
             <a
-              href="https://github.com/stephanieparra/landing-page-project"
+              href="https://github.com/stephanieparra/react-weather-app"
               target="_blank"
               title="Launch Github"
               class="secondary-button btn-group"
@@ -119,16 +120,58 @@
       <div class="row mb-5">
         <div class="col-sm-6">
           <div class="project-description">
-            <h2 class="mb-5 mt-5">Weather App</h2>
+            <h2 class="mb-5 mt-5">React Dictionary App</h2>
             <p class="mb-5">
-              A weather app that gives weather information in real-time, a
-              forecast, and other details using Vanilla Javascript and
+              Integrated dictionaryapi.com's API to display definitions,
+              pronunciation audio and text, and synonyms. Used the Pexels API to
+              display photos of the searched word, Bootstrap to make it
+              responsive, Figma to design the wireframe, and Canva to create a
+              background image.
+            </p>
+            <a
+              href="https://polite-zabaione-cb0350.netlify.app/"
+              target="_blank"
+              title="Launch Project"
+              class="primary-button btn-group"
+              >Launch Project</a
+            >
+            <a
+              href="https://github.com/stephanieparra/dictionary-app"
+              target="_blank"
+              title="Launch Github"
+              class="secondary-button btn-group"
+              >Github</a
+            >
+          </div>
+        </div>
+        <div class="col-sm-6 d-none d-md-block">
+          <img
+            src="/images/dictionary.png"
+            class="img-fluid project-image"
+            alt="weather app project"
+          />
+        </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col-sm-6 d-none d-md-block">
+          <img
+            src="/images/weather-app.png"
+            class="img-fluid project-image"
+            alt="landing page project"
+          />
+        </div>
+        <div class="col-sm-6">
+          <div class="project-description">
+            <h2 class="mb-5">Vanilla JS Weather App</h2>
+            <p class="mb-5">
+              A weather app that gives the current weather, a forecast, and has
+              a geolocation feature. Coded using Vanilla Javascript and
               OpenWeather API integration. Best viewed on desktop.
             </p>
             <a
-              href="https://goofy-davinci-995ba9.netlify.app"
+              href="https://goofy-davinci-995ba9.netlify.app/"
               target="_blank"
-              title="Launch Project"
+              title="Launch project"
               class="primary-button btn-group"
               >Launch Project</a
             >
@@ -140,13 +183,6 @@
               >Github</a
             >
           </div>
-        </div>
-        <div class="col-sm-6 d-none d-md-block">
-          <img
-            src="/images/weather-app.png"
-            class="img-fluid project-image"
-            alt="weather app project"
-          />
         </div>
       </div>
       <div class="row mb-5">
