Added more projects

--- a/index.html
+++ b/index.html
@@ -186,6 +186,38 @@
         </div>
       </div>
       <div class="row mb-5">
+        <div class="col-sm-6">
+          <div class="project-description">
+            <h2 class="mb-5 mt-5">Landing Page</h2>
+            <p class="mb-5">
+              Static landing page coded with HTML/CSS and includes basic
+              Javascript interactions. Background image designed in Canva.
+            </p>
+            <a
+              href="https://priceless-jones-08af43.netlify.app/"
+              target="_blank"
+              title="Launch Project"
+              class="primary-button btn-group"
+              >Launch Project</a
+            >
+            <a
+              href="https://github.com/stephanieparra/landing-page-project"
+              target="_blank"
+              title="Launch Github"
+              class="secondary-button btn-group"
+              >Github</a
+            >
+          </div>
+        </div>
+        <div class="col-sm-6 d-none d-md-block">
+          <img
+            src="/images/dictionary.png"
+            class="img-fluid project-image"
+            alt="weather app project"
+          />
+        </div>
+      </div>
+      <div class="row mb-5">
         <p class="section-title highlight-2">
           <i class="fas fa-pencil-ruler"></i> UX Design
         </p>
