Edits to alt tag and images

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <img
             src="/images/react-weather.png"
             class="img-fluid project-image"
-            alt="landing page project"
+            alt="react weather app"
           />
         </div>
         <div class="col-sm-6">
@@ -148,7 +148,7 @@
           <img
             src="/images/dictionary.png"
             class="img-fluid project-image"
-            alt="weather app project"
+            alt="dictionary app project"
           />
         </div>
       </div>
@@ -157,7 +157,7 @@
           <img
             src="/images/weather-app.png"
             class="img-fluid project-image"
-            alt="landing page project"
+            alt="vanilla javascript weather project"
           />
         </div>
         <div class="col-sm-6">
@@ -211,9 +211,9 @@
         </div>
         <div class="col-sm-6 d-none d-md-block">
           <img
-            src="/images/dictionary.png"
+            src="/images/landing-page.png"
             class="img-fluid project-image"
-            alt="weather app project"
+            alt="landing page project"
           />
         </div>
       </div>
@@ -236,17 +236,10 @@
               resources, education, and crises response as alternatives to the
               police.
               <span class="adobe"
-                >Adobe Design for Good Creative Jam Honorable Mention.
-                (Recruiters, please ask for pw).</span
+                >Adobe Design for Good Creative Jam Honorable Mention. (Please
+                contact me directly to view case study & prototype).</span
               >
             </p>
-            <a
-              href="https://uxfol.io/p/stephanieparrastudio/03a2e210"
-              target="_blank"
-              title="View Case Study"
-              class="primary-button mb-5"
-              >View Case Study</a
-            >
           </div>
         </div>
       </div>
@@ -259,7 +252,7 @@
               accessible to senior citizens with various disabilities.
             </p>
             <a
-              href="https://uxfol.io/p/stephanieparrastudio/03731255"
+              href="https://docs.google.com/document/d/13CxH5ILH8qsSDpFGXdPXtDda19xLOMd5dJ6-KtlKaPc/edit?usp=sharing"
               target="_blank"
               title="View Case Study"
               class="primary-button"
