Added nav items & deleted some elements page

--- a/index.html
+++ b/index.html
@@ -57,13 +57,26 @@
                 class="nav-link active"
                 aria-current="page"
                 href="/"
-                title="Stephanie's Work"
-                >Work</a
+                title="Stephanie's Projects"
+                >Projects</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html" title="About Stephanie"
+              <a class="nav-link" href="#about.html" title="About Stephanie"
                 >About</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="#skills.html"
+                title="Stephanie's Skills & Tools"
+                >Skills</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contact.html" title="Contact Stephanie"
+                >Contact</a
               >
             </li>
           </ul>
@@ -71,17 +84,14 @@
       </div>
     </nav>
     <div class="hero">
-      <h1>
+      <h1 class="text-center">
         Frontend developer 👩🏻‍💻 focused on accessibility, optimal user experience
         & delightful design. Based in Los Angeles.🌴
       </h1>
-      <p class="text-center view-work">
-        View my work below <i class="fas fa-arrow-down"></i>
-      </p>
     </div>
     <div class="container">
       <p class="section-title highlight-1">
-        <i class="fas fa-code"></i> Frontend Dev
+        <i class="fas fa-code"></i> Projects
       </p>
       <div class="row mb-5">
         <div class="col-sm-6 d-none d-md-block">
