Added anchor links for each section

--- a/index.html
+++ b/index.html
@@ -56,26 +56,26 @@
               <a
                 class="nav-link active"
                 aria-current="page"
-                href="/"
+                href="#projects"
                 title="Stephanie's Projects"
                 >Projects</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#about.html" title="About Stephanie"
+              <a class="nav-link" href="#about" title="About Stephanie"
                 >About</a
               >
             </li>
             <li class="nav-item">
               <a
                 class="nav-link"
-                href="#skills.html"
+                href="#skills"
                 title="Stephanie's Skills & Tools"
                 >Skills</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contact.html" title="Contact Stephanie"
+              <a class="nav-link" href="#contact" title="Contact Stephanie"
                 >Contact</a
               >
             </li>
@@ -90,7 +90,7 @@
       </h1>
     </div>
     <div class="container">
-      <p class="section-title highlight-1">
+      <p class="section-title highlight-1" id="projects">
         <i class="fas fa-code"></i> Projects
       </p>
       <div class="row mb-5">
@@ -228,59 +228,15 @@
         </div>
       </div>
       <div class="row mb-5">
-        <p class="section-title highlight-2">
-          <i class="fas fa-pencil-ruler"></i> UX Design
+        <p class="section-title highlight-2" id="about">
+          <i class="fas fa-pencil-ruler"></i> About Me
         </p>
-        <div class="col-sm-6 d-none d-md-block">
-          <img
-            src="/images/kind11.png"
-            class="img-fluid project-image"
-            alt="Kind-1-1 app"
-          />
-        </div>
-        <div class="col-sm-6">
-          <div class="project-description">
-            <h2 class="mb-5">Kind-1-1</h2>
-            <p class="mb-5">
-              An app that provides marginalized communities and allies
-              resources, education, and crises response as alternatives to the
-              police.
-              <span class="adobe"
-                >Adobe Design for Good Creative Jam Honorable Mention. (Please
-                contact me directly to view case study & prototype).</span
-              >
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="row mb-5">
-        <div class="col-sm-6">
-          <div class="project-description">
-            <h2 class="mb-5 mt-5">Senior Tix</h2>
-            <p class="mb-5">
-              Redesigned elements of a discount tickets site to make it more
-              accessible to senior citizens with various disabilities.
-            </p>
-            <a
-              href="https://docs.google.com/document/d/13CxH5ILH8qsSDpFGXdPXtDda19xLOMd5dJ6-KtlKaPc/edit?usp=sharing"
-              target="_blank"
-              title="View Case Study"
-              class="primary-button"
-              >View Case Study</a
-            >
-          </div>
-        </div>
-        <div class="col-sm-6 d-none d-md-block">
-          <img
-            src="/images/senior-tix.png"
-            class="img-fluid project-image"
-            alt="senior tix project"
-          />
-        </div>
       </div>
     </div>
     <footer>
       <div class="d-flex justify-content-center mb-3">
+        <h2 id="contact">Let's Connect!</h2>
+        <h3>Have an idea? Let's build it.</h3>
         <a
           href="mailto:stephanieparrastudio@gmail.com"
           target="_blank"
@@ -301,12 +257,6 @@
           target="_blank"
           title="LinkedIn Profile"
           ><i class="fab fa-linkedin"></i
-        ></a>
-        <a
-          href="https://twitter.com/StephanieMParra"
-          target="_blank"
-          title="Twitter Profile"
-          ><i class="fab fa-twitter"></i
         ></a>
       </div>
       <p class="text-center mt-5" id="copyright">
