Added more sections to page

--- a/index.html
+++ b/index.html
@@ -232,6 +232,16 @@
           <i class="fas fa-pencil-ruler"></i> About Me
         </p>
       </div>
+      <div class="row mb-5">
+        <p class="section-title highlight-2" id="skills">
+          <i class="fas fa-pencil-ruler"></i> Skills
+        </p>
+      </div>
+      <div class="row mb-5">
+        <p class="section-title highlight-2" id="skills">
+          <i class="fas fa-pencil-ruler"></i> Tools
+        </p>
+      </div>
     </div>
     <footer>
       <div class="d-flex justify-content-center mb-3">
