Added buttons to hero description

--- a/index.html
+++ b/index.html
@@ -88,6 +88,18 @@
         Frontend developer 👩🏻‍💻 focused on accessibility, optimal user experience
         & delightful design. Based in Los Angeles.🌴
       </h1>
+      <div class="hero-buttons">
+        <a href="#contact" title="Contact" class="secondary-button btn-group"
+          >Contact</a
+        >
+        <a
+          href="resume-link-here"
+          target="_blank"
+          title="Resume"
+          class="secondary-button btn-group"
+          >See my Resume</a
+        >
+      </div>
     </div>
     <div class="container">
       <p class="section-title highlight-1" id="projects">
