Added about & skills section to main page

--- a/index.html
+++ b/index.html
@@ -243,16 +243,75 @@
         <p class="section-title highlight-2" id="about">
           <i class="fas fa-pencil-ruler"></i> About Me
         </p>
-      </div>
-      <div class="row mb-5">
-        <p class="section-title highlight-2" id="skills">
-          <i class="fas fa-pencil-ruler"></i> Skills
-        </p>
-      </div>
-      <div class="row mb-5">
-        <p class="section-title highlight-2" id="skills">
-          <i class="fas fa-pencil-ruler"></i> Tools
-        </p>
+        <div class="about-section-hero container">
+          <div class="row">
+            <div class="col-lg-6">
+              <h1>👋🏼 Hi, I'm Stephanie!</h1>
+              <p>
+                I'm a self-taught frontend dev currently working on learning
+                JavaScript and React. I come from a non-traditional tech
+                background (I'm a chef!) and am looking for opportunities where
+                I can contribute as a developer and advocate for accessibility,
+                diversity, and inclusivity with what we code and design. Due to
+                my fine-dining catering background, I'm accustomed to working in
+                agile, dynamic environments and value open communication and
+                collaboration to put forth the best version of a product.
+              </p>
+              <p>
+                I'm open to full-time frontend developer roles or internships.
+              </p>
+              <a
+                href="https://docs.google.com/document/d/1efdAGhXiDivWUDOIEqvqUwXqSt8tOp2mvWDqmrw9hBA/edit?usp=sharing"
+                target="_blank"
+                class="view-resume"
+                >View my resumé →</a
+              >
+            </div>
+            <div class="col-lg-6">
+              <img
+                src="images/profile-pic.png"
+                class="img-fluid profile-pic"
+                alt="Stephanie"
+              />
+            </div>
+          </div>
+          <div class="skills-section">
+            <h2 class="skills-header text-center">Skills & Tools</h2>
+            <div class="row row-skills">
+              <div class="col-4 text-center">
+                <i class="fab fa-html5"></i>
+              </div>
+              <div class="col-4 text-center">
+                <i class="fab fa-css3-alt"></i>
+              </div>
+              <div class="col-4 text-center">
+                <i class="fab fa-bootstrap"></i>
+              </div>
+            </div>
+            <div class="row row-skills">
+              <div class="col-4 text-center">
+                <i class="fab fa-js-square"></i>
+              </div>
+              <div class="col-4 text-center">
+                <img src="/images/api.png" width="60" />
+              </div>
+              <div class="col-4 text-center">
+                <i class="fab fa-github-square"></i>
+              </div>
+            </div>
+            <div class="row row-skills">
+              <div class="col-4 text-center">
+                <img src="/images/netlify.png" width="60" />
+              </div>
+              <div class="col-4 text-center">
+                <img src="/images/vscode.png" width="60" />
+              </div>
+              <div class="col-4 text-center">
+                <i class="fab fa-figma"></i>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <footer>
