--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
               />
             </div>
           </div>
-          <div class="skills-section">
+          <div class="skills-section" id="skills">
             <h2 class="skills-header text-center">Skills & Tools</h2>
             <div class="row row-skills">
               <div class="col-4 text-center">
