Changed nav itemhover to underline

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
             <h2 class="skills-header text-center">Skills & Tools</h2>
             <div class="row row-skills">
               <div class="col-4 text-center">
-                <i class="fab fa-html5"></i>
+                <i class="fab fa-html5">HTML</i>
               </div>
               <div class="col-4 text-center">
                 <i class="fab fa-css3-alt"></i>
