Centered hero section buttons

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           target="_blank"
           title="Resume"
           class="secondary-button btn-group"
-          >See my Resume</a
+          >See my resume</a
         >
       </div>
     </div>
@@ -279,7 +279,8 @@
             <h2 class="skills-header text-center">Skills & Tools</h2>
             <div class="row row-skills">
               <div class="col-4 text-center">
-                <i class="fab fa-html5">HTML</i>
+                <p class="skill-title">HTML</p>
+                <i class="fab fa-html5"></i>
               </div>
               <div class="col-4 text-center">
                 <i class="fab fa-css3-alt"></i>
