--- a/index.html
+++ b/index.html
@@ -105,140 +105,69 @@
       <p class="section-title highlight-1" id="projects">
         <i class="fas fa-code"></i> Projects
       </p>
-      <div class="row mb-5">
-        <div class="col-sm-6 d-none d-md-block">
-          <img
-            src="/images/react-weather.png"
-            class="img-fluid project-image"
-            alt="react weather app"
-          />
-        </div>
-        <div class="col-sm-6">
-          <div class="project-description">
-            <h2 class="mb-5">React Weather App</h2>
-            <p class="mb-5">
-              Developed React components for interactive weather application,
-              using real-time data from the OpenWeatherMap API integrating
-              geolocation, changing icons & custom music playlist functionality
-              to increase user engagement.
-            </p>
-            <a
-              href="https://loquacious-fairy-25d2bd.netlify.app/"
-              target="_blank"
-              title="Launch project"
-              class="primary-button btn-group"
-              >Launch Project</a
-            >
-            <a
-              href="https://github.com/stephanieparra/react-weather-app"
-              target="_blank"
-              title="Launch Github"
-              class="secondary-button btn-group"
-              >Github</a
-            >
+    <div class="container mt-4">
+    <div class="row">
+      <!-- Image 1 -->
+      <div class="col-md-4 mb-4">
+        <div class="card">
+          <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/128/749/original/Screenshot_2024-06-12_at_3.37.26_PM.png?1718231944" class="card-img-top" alt="Image 1">
+          <div class="card-body">
+            <h5 class="card-title">Vaporwave Weather App</h5>
+            <h6 class="skills-used">React, Rest API, HTML, CSS</h6>
+            <p class="card-text">
+A React weather application, using real-time data from the SheCodes Weather API, integrating geolocation, a search feature, changing icons & custom music playlist functionality (Spotify embed) to increase user interaction.
+</p>
+<button type="button" class="btn btn-link">Github Repo</button>
+<button type="button" class="btn btn-link">Live Version</button>
           </div>
         </div>
       </div>
-      <div class="row mb-5">
-        <div class="col-sm-6">
-          <div class="project-description">
-            <h2 class="mb-5 mt-5">React Dictionary App</h2>
-            <p class="mb-5">
-              Integrated dictionaryapi.com's API to display definitions,
-              pronunciation audio and text, and synonyms. Used the Pexels API to
-              display photos of the searched word, Bootstrap to make it
-              responsive, Figma to design the wireframe, and Canva to create a
-              background image.
-            </p>
-            <a
-              href="https://polite-zabaione-cb0350.netlify.app/"
-              target="_blank"
-              title="Launch Project"
-              class="primary-button btn-group"
-              >Launch Project</a
-            >
-            <a
-              href="https://github.com/stephanieparra/dictionary-app"
-              target="_blank"
-              title="Launch Github"
-              class="secondary-button btn-group"
-              >Github</a
-            >
-          </div>
-        </div>
-        <div class="col-sm-6 d-none d-md-block">
-          <img
-            src="/images/dictionary.png"
-            class="img-fluid project-image"
-            alt="dictionary app project"
-          />
-        </div>
-      </div>
-      <div class="row mb-5">
-        <div class="col-sm-6 d-none d-md-block">
-          <img
-            src="/images/weather-app.png"
-            class="img-fluid project-image"
-            alt="vanilla javascript weather project"
-          />
-        </div>
-        <div class="col-sm-6">
-          <div class="project-description">
-            <h2 class="mb-5">Vanilla JS Weather App</h2>
-            <p class="mb-5">
-              A weather app that gives the current weather, a forecast, and has
-              a geolocation feature. Coded using Vanilla Javascript and
-              OpenWeather API integration. Best viewed on desktop.
-            </p>
-            <a
-              href="https://goofy-davinci-995ba9.netlify.app/"
-              target="_blank"
-              title="Launch project"
-              class="primary-button btn-group"
-              >Launch Project</a
-            >
-            <a
-              href="https://github.com/stephanieparra/shecodes-weather-app"
-              target="_blank"
-              title="Launch Github"
-              class="secondary-button btn-group"
-              >Github</a
-            >
+      <!-- Image 2 -->
+      <div class="col-md-4 mb-4">
+        <div class="card">
+          <img src="image2.jpg" class="card-img-top" alt="Image 2">
+          <div class="card-body">
+            <h5 class="card-title">Title 2</h5>
+            <p class="card-text">Paragraph 1 for Image 2.</p>
+            <p class="card-text">Paragraph 2 for Image 2.</p>
           </div>
         </div>
       </div>
-      <div class="row mb-5">
-        <div class="col-sm-6">
-          <div class="project-description">
-            <h2 class="mb-5 mt-5">Landing Page</h2>
-            <p class="mb-5">
-              Static landing page coded with HTML/CSS and includes basic
-              Javascript interactions. Background image designed in Canva.
-            </p>
-            <a
-              href="https://priceless-jones-08af43.netlify.app/"
-              target="_blank"
-              title="Launch Project"
-              class="primary-button btn-group"
-              >Launch Project</a
-            >
-            <a
-              href="https://github.com/stephanieparra/landing-page-project"
-              target="_blank"
-              title="Launch Github"
-              class="secondary-button btn-group"
-              >Github</a
-            >
+      <!-- Image 3 -->
+      <div class="col-md-4 mb-4">
+        <div class="card">
+          <img src="image3.jpg" class="card-img-top" alt="Image 3">
+          <div class="card-body">
+            <h5 class="card-title">Title 3</h5>
+            <p class="card-text">Paragraph 1 for Image 3.</p>
+            <p class="card-text">Paragraph 2 for Image 3.</p>
           </div>
         </div>
-        <div class="col-sm-6 d-none d-md-block">
-          <img
-            src="/images/landing-page.png"
-            class="img-fluid project-image"
-            alt="landing page project"
-          />
+      </div>
+      <div class="row justify-content-center">
+        <!-- Image 4 -->
+      <div class="col-md-4 mb-4">
+        <div class="card">
+          <img src="image4.jpg" class="card-img-top" alt="Image 4">
+          <div class="card-body">
+            <h5 class="card-title">Title 4</h5>
+            <p class="card-text">Paragraph 1 for Image 4.</p>
+            <p class="card-text">Paragraph 2 for Image 4.</p>
+          </div>
         </div>
       </div>
+      <!-- Image 5 -->
+      <div class="col-md-4 mb-4">
+        <div class="card">
+          <img src="image5.jpg" class="card-img-top" alt="Image 5">
+          <div class="card-body">
+            <h5 class="card-title">Title 5</h5>
+            <p class="card-text">Paragraph 1 for Image 5.</p>
+            <p class="card-text">Paragraph 2 for Image 5.</p>
+          </div>
+        </div>
+      </div>
+    </div>
       <div class="row mb-5">
         <p class="section-title highlight-2" id="about">
           <i class="fas fa-pencil-ruler"></i> About Me
