Added project images

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <!-- Image 1 -->
       <div class="col-md-4 mb-4">
         <div class="card">
-          <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/128/749/original/Screenshot_2024-06-12_at_3.37.26_PM.png?1718231944" class="card-img-top" alt="Image 1">
+          <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/128/750/original/1.png?1718234743" class="card-img-top" alt="Image 1">
           <div class="card-body">
             <h5 class="card-title">Vaporwave Weather App</h5>
             <h6 class="skills-used">React, Rest API, HTML, CSS</h6>
@@ -125,7 +125,7 @@ A React weather application, using real-time data from the SheCodes Weather API,
       <!-- Image 2 -->
       <div class="col-md-4 mb-4">
         <div class="card">
-          <img src="image2.jpg" class="card-img-top" alt="Image 2">
+          <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/128/754/original/dictionary.png?1718234849" class="card-img-top" alt="Image 2">
           <div class="card-body">
             <h5 class="card-title">Title 2</h5>
             <p class="card-text">Paragraph 1 for Image 2.</p>
@@ -136,7 +136,7 @@ A React weather application, using real-time data from the SheCodes Weather API,
       <!-- Image 3 -->
       <div class="col-md-4 mb-4">
         <div class="card">
-          <img src="image3.jpg" class="card-img-top" alt="Image 3">
+          <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/128/753/original/5.png?1718234834" class="card-img-top" alt="Image 3">
           <div class="card-body">
             <h5 class="card-title">Title 3</h5>
             <p class="card-text">Paragraph 1 for Image 3.</p>
@@ -148,7 +148,7 @@ A React weather application, using real-time data from the SheCodes Weather API,
         <!-- Image 4 -->
       <div class="col-md-4 mb-4">
         <div class="card">
-          <img src="image4.jpg" class="card-img-top" alt="Image 4">
+          <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/128/751/original/3.png?1718234816" class="card-img-top" alt="Image 4">
           <div class="card-body">
             <h5 class="card-title">Title 4</h5>
             <p class="card-text">Paragraph 1 for Image 4.</p>
@@ -159,7 +159,7 @@ A React weather application, using real-time data from the SheCodes Weather API,
       <!-- Image 5 -->
       <div class="col-md-4 mb-4">
         <div class="card">
-          <img src="image5.jpg" class="card-img-top" alt="Image 5">
+          <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/128/752/original/4.png?1718234825" class="card-img-top" alt="Image 5">
           <div class="card-body">
             <h5 class="card-title">Title 5</h5>
             <p class="card-text">Paragraph 1 for Image 5.</p>
