Added titles, skills, and descriptions to each project card

--- a/index.html
+++ b/index.html
@@ -113,12 +113,12 @@
           <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/128/750/original/1.png?1718234743" class="card-img-top" alt="Image 1">
           <div class="card-body">
             <h5 class="card-title">Vaporwave Weather App</h5>
-            <h6 class="skills-used">React, Rest API, HTML, CSS</h6>
+            <h6 class="skills-used">Skills: React, Rest API, Axios, Bootstrap, JavaScript, CSS</h6>
             <p class="card-text">
-A React weather application, using real-time data from the SheCodes Weather API, integrating geolocation, a search feature, changing icons & custom music playlist functionality (Spotify embed) to increase user interaction.
+React weather app, using real-time data from the SheCodes Weather API, integrating geolocation, a search feature, changing icons & custom music playlist functionality (Spotify embed) to increase user interaction.
 </p>
-<button type="button" class="btn btn-link">Github Repo</button>
-<button type="button" class="btn btn-link">Live Version</button>
+<button type="button" class="github-repo-link">Github Repo</button>
+<button type="button" class="live-version-link">Live Version</button>
           </div>
         </div>
       </div>
@@ -127,9 +127,13 @@ A React weather application, using real-time data from the SheCodes Weather API,
         <div class="card">
           <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/128/754/original/dictionary.png?1718234849" class="card-img-top" alt="Image 2">
           <div class="card-body">
-            <h5 class="card-title">Title 2</h5>
-            <p class="card-text">Paragraph 1 for Image 2.</p>
-            <p class="card-text">Paragraph 2 for Image 2.</p>
+            <h5 class="card-title">Bookish Dictionary App</h5>
+            <h6 class="skills-used">Skills: React, Rest API, Axios, Bootstrap, JavaScript, CSS</h6>
+            <p class="card-text">
+Integrated SheCode's Dictionary API to display definitions, pronunciation audio and text, synonyms and images of the searched word.
+</p>
+<button type="button" class="github-repo-link">Github Repo</button>
+<button type="button" class="live-version-link">Live Version</button>
           </div>
         </div>
       </div>
@@ -138,9 +142,13 @@ A React weather application, using real-time data from the SheCodes Weather API,
         <div class="card">
           <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/128/753/original/5.png?1718234834" class="card-img-top" alt="Image 3">
           <div class="card-body">
-            <h5 class="card-title">Title 3</h5>
-            <p class="card-text">Paragraph 1 for Image 3.</p>
-            <p class="card-text">Paragraph 2 for Image 3.</p>
+            <h5 class="card-title">Sticky Notes</h5>
+            <h6 class="skills-used">Skills: React, JavaScript, CSS</h6>
+            <p class="card-text">
+React app that allows users to create new notes, search for them, write in the title and description fields, and delete them.
+</p>
+<button type="button" class="github-repo-link">Github Repo</button>
+<button type="button" class="live-version-link">Live Version</button>
           </div>
         </div>
       </div>
@@ -150,9 +158,13 @@ A React weather application, using real-time data from the SheCodes Weather API,
         <div class="card">
           <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/128/751/original/3.png?1718234816" class="card-img-top" alt="Image 4">
           <div class="card-body">
-            <h5 class="card-title">Title 4</h5>
-            <p class="card-text">Paragraph 1 for Image 4.</p>
-            <p class="card-text">Paragraph 2 for Image 4.</p>
+            <h5 class="card-title">Github Repo Gallery</h5>
+            <h6 class="skills-used">Skills: JavaScript, Rest API, CSS</h6>
+            <p class="card-text">
+A javascript site that displays my public repos from github and displays the name, description, default branch, and main languages used on that project. Users can click through each repo, view the repo on github, or go back to the main gallery.
+</p>
+<button type="button" class="github-repo-link">Github Repo</button>
+<button type="button" class="live-version-link">Live Version</button>
           </div>
         </div>
       </div>
@@ -161,9 +173,14 @@ A React weather application, using real-time data from the SheCodes Weather API,
         <div class="card">
           <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/128/752/original/4.png?1718234825" class="card-img-top" alt="Image 5">
           <div class="card-body">
-            <h5 class="card-title">Title 5</h5>
-            <p class="card-text">Paragraph 1 for Image 5.</p>
-            <p class="card-text">Paragraph 2 for Image 5.</p>
+            <h5 class="card-title">Retro Guess the Word Game</h5>
+            <h6 class="skills-used">Skills: JavaScript, HTML, CSS</h6>
+            <p class="card-text">
+An interactive vanilla javascript project where the player types a letter to guess a word. The project features the display of already-guessed letters, the countdown to how many guesses remain, and the option to restart the game.
+
+</p>
+<button type="button" class="github-repo-link">Github Repo</button>
+<button type="button" class="live-version-link">Live Version</button>
           </div>
         </div>
       </div>
