--- a/index.html
+++ b/index.html
@@ -112,13 +112,17 @@
         <div class="card">
           <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/128/750/original/1.png?1718234743" class="card-img-top" alt="Image 1">
           <div class="card-body">
-            <h5 class="card-title">Vaporwave Weather App</h5>
+            <h5 class="card-title">Weather App</h5>
             <h6 class="skills-used">Skills: React, Rest API, Axios, Bootstrap, JavaScript, CSS</h6>
             <p class="card-text">
 React weather app, using real-time data from the SheCodes Weather API, integrating geolocation, a search feature, changing icons & custom music playlist functionality (Spotify embed) to increase user interaction.
 </p>
-<button type="button" class="github-repo-link">Github Repo</button>
-<button type="button" class="live-version-link">Live Version</button>
+<a href="https://github.com/stephanieparra/react-weather-app" title="github-repo" class="github-repo-link"
+          >Github Repo</a
+        >
+<a href="https://react-vaporwave-weather-app.netlify.app" title="live-version-link" class="live-version-link"
+          >Live Version</a
+        >
           </div>
         </div>
       </div>
@@ -127,13 +131,17 @@ React weather app, using real-time data from the SheCodes Weather API, integrati
         <div class="card">
           <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/128/754/original/dictionary.png?1718234849" class="card-img-top" alt="Image 2">
           <div class="card-body">
-            <h5 class="card-title">Bookish Dictionary App</h5>
+            <h5 class="card-title">Dictionary App</h5>
             <h6 class="skills-used">Skills: React, Rest API, Axios, Bootstrap, JavaScript, CSS</h6>
             <p class="card-text">
 Integrated SheCode's Dictionary API to display definitions, pronunciation audio and text, synonyms and images of the searched word.
 </p>
-<button type="button" class="github-repo-link">Github Repo</button>
-<button type="button" class="live-version-link">Live Version</button>
+<a href="https://github.com/stephanieparra/dictionary-app" title="github-repo" class="github-repo-link"
+          >Github Repo</a
+        >
+<a href="https://react-dynamic-dictionary.netlify.app" title="live-version-link" class="live-version-link"
+          >Live Version</a
+        >
           </div>
         </div>
       </div>
@@ -147,8 +155,12 @@ Integrated SheCode's Dictionary API to display definitions, pronunciation audio 
             <p class="card-text">
 React app that allows users to create new notes, search for them, write in the title and description fields, and delete them.
 </p>
-<button type="button" class="github-repo-link">Github Repo</button>
-<button type="button" class="live-version-link">Live Version</button>
+<a href="https://github.com/stephanieparra/react-sticky-notes" title="github-repo" class="github-repo-link"
+          >Github Repo</a
+        >
+<a href="https://post-it-notes-react-app.netlify.app" title="live-version-link" class="live-version-link"
+          >Live Version</a
+        >
           </div>
         </div>
       </div>
@@ -163,8 +175,12 @@ React app that allows users to create new notes, search for them, write in the t
             <p class="card-text">
 A javascript site that displays my public repos from github and displays the name, description, default branch, and main languages used on that project. Users can click through each repo, view the repo on github, or go back to the main gallery.
 </p>
-<button type="button" class="github-repo-link">Github Repo</button>
-<button type="button" class="live-version-link">Live Version</button>
+<a href="https://github.com/stephanieparra/github-repo-gallery" title="github-repo" class="github-repo-link"
+          >Github Repo</a
+        >
+<a href="https://gh-repo-gallery.netlify.app" title="live-version-link" class="live-version-link"
+          >Live Version</a
+        >
           </div>
         </div>
       </div>
@@ -179,8 +195,12 @@ A javascript site that displays my public repos from github and displays the nam
 An interactive vanilla javascript project where the player types a letter to guess a word. The project features the display of already-guessed letters, the countdown to how many guesses remain, and the option to restart the game.
 
 </p>
-<button type="button" class="github-repo-link">Github Repo</button>
-<button type="button" class="live-version-link">Live Version</button>
+<a href="https://github.com/stephanieparra/guess-the-word-project" title="github-repo" class="github-repo-link"
+          >Github Repo</a
+        >
+<a href="https://javascript-guess-word-game.netlify.app" title="live-version-link" class="live-version-link"
+          >Live Version</a
+        >
           </div>
         </div>
       </div>
