Added unordered list of skills to card

--- a/index.html
+++ b/index.html
@@ -113,7 +113,14 @@
           <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/128/750/original/1.png?1718234743" class="card-img-top" alt="Image 1">
           <div class="card-body">
             <h3 class="card-title">Weather App</h3>
-            <h6 class="skills-used">Skills: React, Rest API, Axios, Bootstrap, JavaScript, CSS</h6>
+            <ul class="skills-used">
+              <li>React</li>
+              <li>Rest API</li>
+              <li>Axios</li>
+              <li>Bootstrap</li>
+              <li>JavaScript</li>
+              <li>CSS</li>
+            </ul>
             <p class="card-text">
 React weather app, using real-time data from the SheCodes Weather API, integrating geolocation, a search feature, changing icons & custom music playlist functionality (Spotify embed) to increase user interaction.
 </p>
