--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
               <li>CSS</li>
             </ul>
             <p class="card-text">
-React weather app, using real-time data from the SheCodes Weather API, integrating geolocation, a search feature, changing icons & custom music playlist functionality (Spotify embed) to increase user interaction.
+Uses real-time data from the SheCodes Weather API, integrates geolocation, a search feature, changing icons & custom music playlist functionality (Spotify embed).
 </p>
 <a href="https://github.com/stephanieparra/react-weather-app" title="github-repo" class="github-repo-link"
           >Github Repo</a
@@ -139,7 +139,14 @@ React weather app, using real-time data from the SheCodes Weather API, integrati
           <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/128/754/original/dictionary.png?1718234849" class="card-img-top" alt="Image 2">
           <div class="card-body">
             <h3 class="card-title">Dictionary App</h3>
-            <h6 class="skills-used">Skills: React, Rest API, Axios, Bootstrap, JavaScript, CSS</h6>
+            <ul class="skills-used">
+              <li>React</li>
+              <li>Rest API</li>
+              <li>Axios</li>
+              <li>Bootstrap</li>
+              <li>JavaScript</li>
+              <li>CSS</li>
+            </ul>
             <p class="card-text">
 Integrated SheCode's Dictionary API to display definitions, pronunciation audio and text, synonyms and images of the searched word.
 </p>
@@ -158,9 +165,13 @@ Integrated SheCode's Dictionary API to display definitions, pronunciation audio 
           <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/128/753/original/5.png?1718234834" class="card-img-top" alt="Image 3">
           <div class="card-body">
             <h3 class="card-title">Sticky Notes</h3>
-            <h6 class="skills-used">Skills: React, JavaScript, CSS</h6>
+            <ul class="skills-used">
+              <li>React</li>
+              <li>JavaScript</li>
+              <li>CSS</li>
+            </ul>
             <p class="card-text">
-React app that allows users to create new notes, search for them, write in the title and description fields, and delete them.
+Allows users to create, search for, and delete notes & write in the title and description fields.
 </p>
 <a href="https://github.com/stephanieparra/react-sticky-notes" title="github-repo" class="github-repo-link"
           >Github Repo</a
@@ -178,9 +189,13 @@ React app that allows users to create new notes, search for them, write in the t
           <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/128/751/original/3.png?1718234816" class="card-img-top" alt="Image 4">
           <div class="card-body">
             <h3 class="card-title">Github Repo Gallery</h3>
-            <h6 class="skills-used">Skills: JavaScript, Rest API, CSS</h6>
+            <ul class="skills-used">
+              <li>Rest API</li>
+              <li>JavaScript</li>
+              <li>CSS</li>
+            </ul>
             <p class="card-text">
-A javascript site that displays my public repos from github and displays the name, description, default branch, and main languages used on that project. Users can click through each repo, view the repo on github, or go back to the main gallery.
+A vanilla javascript site that displays my public repos from github, employs dynamic searching, and displays the name, description, default branch, and main languages used on that project. Users can click through each repo, view the repo on github, or go back to the main gallery.
 </p>
 <a href="https://github.com/stephanieparra/github-repo-gallery" title="github-repo" class="github-repo-link"
           >Github Repo</a
@@ -197,7 +212,11 @@ A javascript site that displays my public repos from github and displays the nam
           <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/128/752/original/4.png?1718234825" class="card-img-top" alt="Image 5">
           <div class="card-body">
             <h3 class="card-title">Retro Guess the Word Game</h3>
-            <h6 class="skills-used">Skills: JavaScript, HTML, CSS</h6>
+            <ul class="skills-used">
+              <li>JavaScript</li>
+              <li>HTML</li>
+              <li>CSS</li>
+            </ul>
             <p class="card-text">
 An interactive vanilla javascript project where the player types a letter to guess a word. The project features the display of already-guessed letters, the countdown to how many guesses remain, and the option to restart the game.
 
