Added styles to cards and changed nav color

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <ul class="navbar-nav navbar-right ms-auto">
             <li class="nav-item">
               <a
-                class="nav-link active"
+                class="nav-link"
                 aria-current="page"
                 href="#projects"
                 title="Stephanie's Projects"
@@ -89,7 +89,7 @@
         & delightful design. Based in Los Angeles.🌴
       </h1>
       <div class="hero-buttons">
-        <a href="#contact" title="Contact" class="secondary-button btn-group"
+        <a href="#contact" title="Contact" class="primary-button btn-group"
           >Contact</a
         >
         <a
@@ -211,7 +211,7 @@ A vanilla javascript site that displays my public repos from github, employs dyn
         <div class="card">
           <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/128/752/original/4.png?1718234825" class="card-img-top" alt="Image 5">
           <div class="card-body">
-            <h3 class="card-title">Retro Guess the Word Game</h3>
+            <h3 class="card-title">Guess the Word Game</h3>
             <ul class="skills-used">
               <li>JavaScript</li>
               <li>HTML</li>
