Removed highlight from section titles

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       </div>
     </div>
     <div class="container">
-      <p class="section-title highlight-1" id="projects">
+      <p class="section-title" id="projects">
         <i class="fas fa-code"></i> Projects
       </p>
     <div class="container mt-4">
@@ -232,7 +232,7 @@ An interactive vanilla javascript project where the player types a letter to gue
       </div>
     </div>
       <div class="row mb-5">
-        <p class="section-title highlight-2" id="about">
+        <p class="section-title" id="about">
           <i class="fas fa-pencil-ruler"></i> About Me
         </p>
         <div class="about-section-hero container">
