Added styling on section titles

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     </div>
     <div class="container">
       <p class="section-title" id="projects">
-        <i class="fas fa-code"></i> Projects
+        Projects🛠️
       </p>
     <div class="container mt-4">
     <div class="row">
@@ -233,7 +233,7 @@ An interactive vanilla javascript project where the player types a letter to gue
     </div>
       <div class="row mb-5">
         <p class="section-title" id="about">
-          <i class="fas fa-pencil-ruler"></i> About Me
+        About Me✨
         </p>
         <div class="about-section-hero container">
           <div class="row">
