Edited skills section with bootstrap

--- a/index.html
+++ b/index.html
@@ -259,45 +259,53 @@ An interactive vanilla javascript project where the player types a letter to gue
             </div>
           </div>
           <div class="skills-section" id="skills">
-            <h2 class="skills-header text-center">Skills & Tools</h2>
-            <div class="row row-skills">
-              <div class="col-4 text-center">
-                <p class="skill-title">HTML</p>
+            <h2 class="section-title text-center">Skills & Tools🧰</h2>
+            <div class="row row-skills justify-content-center">
+              <div class="col-2 text-center">
                 <i class="fab fa-html5"></i>
+                <p class="skill-title">HTML5</p>
               </div>
-              <div class="col-4 text-center">
+              <div class="col-2 text-center">
                 <i class="fab fa-css3-alt"></i>
+                <p class="skill-title">CSS3</p>
               </div>
-              <div class="col-4 text-center">
-                <i class="fab fa-bootstrap"></i>
-              </div>
-            </div>
-            <div class="row row-skills">
-              <div class="col-4 text-center">
+              <div class="col-2 text-center">
                 <i class="fab fa-js-square"></i>
+                <p class="skill-title">JavaScript</p>
               </div>
-              <div class="col-4 text-center">
+              <div class="col-2 text-center">
+                <i class="fab fa-react"></i>
+                <p class="skill-title">React</p>
+              </div>
+              <div class="col-2 text-center"> 
+                <i class="fab fa-bootstrap"></i>
+                <p class="skill-title">Bootstrap</p>
+              </div>
+            <div class="row row-skills justify-content-center">
+              <div class="col-2 text-center">
                 <img src="/images/api.png" width="60" />
+                <p class="skill-title">REST APIs</p>
               </div>
-              <div class="col-4 text-center">
+              <div class="col-2 text-center">
                 <i class="fab fa-github-square"></i>
+                <p class="skill-title">GitHub</p>
               </div>
-            </div>
-            <div class="row row-skills">
-              <div class="col-4 text-center">
+              <div class="col-2 text-center">
                 <img src="/images/netlify.png" width="60" />
+                <p class="skill-title">Hosting/Netlify</p>
               </div>
-              <div class="col-4 text-center">
+              <div class="col-2 text-center">
                 <img src="/images/vscode.png" width="60" />
+                <p class="skill-title">VSCode</p>
               </div>
-              <div class="col-4 text-center">
+              <div class="col-2 text-center">
                 <i class="fab fa-figma"></i>
+                <p class="skill-title">Figma</p>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
     <footer>
       <div class="d-flex justify-content-center mb-3">
         <h2 id="contact">Let's Connect!</h2>
