Added styling tofooter and h2

--- a/index.html
+++ b/index.html
@@ -307,9 +307,8 @@ An interactive vanilla javascript project where the player types a letter to gue
         </div>
       </div>
     <footer>
-      <div class="d-flex justify-content-center mb-3">
+      <div class="d-flex flex-column align-items-center mb-3">
         <h2 id="contact">Let's Connect!</h2>
-        <h3>Have an idea? Let's build it.</h3>
         <a
           href="mailto:stephanieparrastudio@gmail.com"
           target="_blank"
